// -----------------------------------------------
// phantom-lang
// https://github.com/notcl4y14/phantom-lang
// -----------------------------------------------

// -----------------------------------------------
// UNDER DEVELOPMENT VERSIONS
// -----------------------------------------------

// 21/1/2024
- Removed the (**) operator and instead applied it to the power (^) operator
- Added parenthesised expression
- Fixed Result.register()

// 10/1/2024
- Created Result.js
- Created Position.js
- Created Error.js
- Added power (^) and multiplicand (**) operators to parser and interpreter

// 9/1/2024
- Created Interpreter.js
- Created Node.js
- Added "--last-eval" argument

// 8/1/2024
- Created Parser.js
- Added "--parser" argument
----
- Now the language reads and interprets files
- Added "--lexer" argument
- Created "tests" folder
    + x_plus_y.pht
    + threading.pht
    + test.pht
- Fixed lexer skipping a character after lexerizing identifier

// 7/1/2024
- Added tokens
    + Number
    + String
    + Identifier
    + Keyword
    + Literal
    + Paren
    + Bracket
    + Brace

// 6/1/2024
- Created Lexer.js
- Added tokens
	+ Operator
	+ Dot
	+ Comma
	+ Colon
	+ Semicolon
	+ Not
	+ Ampersand
	+ Pipe

// 3/1/2024
- Created Token.js
- Created utils folder
	+ tools.js

// 20/12/2023
- Initial release
- Created main.js