@@ -1,1 +1,2 @@
-(10 + 5) ^ 2
+let x = 5
+let y: number = 10
