@@ -8,6 +8,13 @@
 // -----------------------------------------------
 
 // 21/1/2024
+- Added Variable declaration
+- Added "--env" argument
+- Created RuntimeValue.js
+- Created Environment.js
+- Spaghetti'd the code
+- Broke the code
+----
 - Removed the (**) operator and instead applied it to the power (^) operator
 - Added parenthesised expression
 - Fixed Result.register()
